--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 buildscript {
     ext.corda_release_group = 'net.corda'
-    ext.corda_release_version = '3.1-corda'
+    ext.corda_release_version = '3.2-corda'
     ext.corda_gradle_plugins_version = '3.1.0'
     ext.junit_version = '4.12'
     ext.quasar_version = '0.7.9'
-
     repositories {
         mavenLocal()
         mavenCentral()
@@ -94,6 +93,10 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         name "O=Notary,L=London,C=GB"
         notary = [validating : true]
         p2pPort 10002
+        rpcSettings {
+            address("localhost:10003")
+            adminAddress("localhost:10043")
+        }
         cordapps = [
                 "$project.group:cordapp-contracts-states:$project.version",
                 "$project.group:cordapp:$project.version",
