--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,21 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         ]
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
+    node {
+        name "O=Retailer,L=Aachen,C=DE"
+        p2pPort 10013
+        rpcSettings {
+            address("localhost:10014")
+            adminAddress("localhost:10055")
+        }
+        webPort 10014
+        cordapps = [
+                "$project.group:cordapp-contracts-states:$project.version",
+                "$project.group:cordapp:$project.version",
+                "$corda_release_group:corda-finance:$corda_release_version"
+        ]
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
 }
 
 task runTemplateClient(type: JavaExec) {
