--- a/build.gradle
+++ b/build.gradle
@@ -160,7 +160,8 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
                 "$project.group:cordapp:$project.version",
                 "$corda_release_group:corda-finance:$corda_release_version"
         ]
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+        rpcUsers = [[ user: "Junior Engineer", "password": "123", "permissions": ["com.template.PledgeFlow"]],
+                     [user: "Senior Engineer", "password": "321", "permissions": ["ALL"]]]
     }
 }
 
